fix a algunos margin y align-self para div.lugar

--- a/css/index.css
+++ b/css/index.css
@@ -129,9 +129,13 @@ header img#header-ultima{
     justify-content: space-between;
     align-items: center;
 }
+.lugar{
+    align-self: flex-end;
+}
 .lugar-elegido{
     display: flex;
     align-items: center;
+    margin: 0rem 0rem 1.7rem 0rem;
 }
 .lugar-elegido img{
     width: 3.2rem;
@@ -151,7 +155,7 @@ h5{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0rem 0rem 0rem 3.2rem;
+    margin: 0rem 0rem 1.8rem 3.2rem;
 }
 .lugar-procedencia h5{
     margin: 0rem 0.8rem 0rem 0.8rem;
